Fixed overflow bug

--- a/src/components/RandomCocktailCardButton/RandomCocktailCardButton.scss
+++ b/src/components/RandomCocktailCardButton/RandomCocktailCardButton.scss
@@ -3,7 +3,10 @@
     display: flex;
     flex-direction: column;
     padding-top: 1px;
-    width:600px;
+    max-width:600px;
+    .MuiDialog-paperWidthSm{
+        overflow: hidden;
+    }
     
     h2{
         align-items:center;
